SVN
* Updated view mode of "views".
* Fixed bug [#10357]: code expansion shouldn't occur in comment lines.

0.5.99.4
* Added the test/test_helper in list of helpers.
* Added list of templates in speedbar.
* Fixed bug [#10056]: when one open file in a read only directory,
  flymake try to open a new file and failed (thanks Rémi Vanicat).
* Fixed bug [#9991]: allow setup key prefix for rails-minor-mode.
* Fixed bug [#10053]: don't match rhtml/rxml/rjs files in test output (thanks Rémi Vanicat).

0.5.99.3
* Added speedbar integration, type [F11] to toogle speedbar.
* Fixed bug #9880: the hotkey "C-c ." conflicted with ECB, changed to "C-c C-c ,".
* New hotkeys, to easy switch without a popup menu between a
  controller or a model related files.
  In model layout:
    - "C-c m" go to model
    - "C-c u" go to unit test
    - "C-c g" go to migration
    - "C-c c" go to controller
    - "C-c x" go to fixture
    - "C-c n" go to mailer
  In controller layout:
    - "C-c g" go to migration
    - "C-c m" go to model
    - "C-c h" go to helper
    - "C-c f" go to functional test
    - "C-c c" go to controller
    - "C-c u" go to unit test
* Fixed bug #9783 (remove-postfix: Wrong type argument: arrayp, nil).
* Updated the compilation output, for better highlight of error and warnings.
* Added the flymake support to on the fly syntax checked in the ruby-mode.

0.5.99.2
* Added new dynamic snippets for RESTful,
    for instance: in controller UsersController type "rshow<TAB>"
    will be expand to "user_url(@user)" and display tooltip "GET /users/1".
* Added migration support - migrate, migrate to previous version,
  migrate to version.
* Created separate menubar entries named "Navigate", "Database", "Tests".
* Fixed bug #9721: Emacs 21.4.x can't load rails-core.el with error "Wrong
  number of arguments: #<subr defalias>".
* Added support pcompletion in ruby-mode (if possible).
* Added new "Go to unit tests" and "Go to functional tests" hotkeys
  and menu entries.