@@ -1,5 +1,8 @@
 SVN
-* Updated view mode of "views".
+* Fixed bug [#10417]: Append the ruby-flymake only if the flymake is
+  available. Raise a error if emacs-rails run on old version of Emacs
+  (less 22)
+* Updated view mode of "views"
 * Fixed bug [#10357]: code expansion shouldn't occur in comment lines.
 
 0.5.99.4
